--- a/src/SVDpp_surprise.ipynb
+++ b/src/SVDpp_surprise.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,25 @@
     "## Results: params \n",
     "\n",
     "note: run on Leonhard cluster (20 cores and 22GB mem) <br/>\n",
-    "cv=10"
+    "cv=10\n",
+    "\n",
+    "0.995445402547  \n",
+    "{'lr_all': 0.0092244620489602275, 'n_factors': 71, 'reg_all': 0.078864113503182592}\n",
+    "\n",
+    "0.996853075175  \n",
+    "{'lr_all': 0.0080231466104846508, 'n_factors': 77, 'reg_all': 0.081201815513722436}\n",
+    "\n",
+    "1.01384855614  \n",
+    "{}\n",
+    "\n",
+    "0.996911527037  \n",
+    "{'lr_all': 0.01021104810095308, 'n_factors': 15, 'reg_all': 0.073931026257899185}\n",
+    "\n",
+    "0.997546908531  \n",
+    "{'lr_all': 0.0073480945698983675, 'n_factors': 12, 'reg_all': 0.072260697833741921}\n",
+    "\n",
+    "1.00041116787  \n",
+    "{'lr_all': 0.005849089260803208, 'n_factors': 69, 'reg_all': 0.090348276620233745}"
    ]
   },
   {
@@ -158,23 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10f07c128>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x109d6ccc0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# choose optimal params from above\n",
-    "algo = SVDpp()\n",
+    "# params = {'lr_all': 0.0092244620489602275, 'n_factors': 71, 'reg_all': 0.078864113503182592}\n",
+    "algo = SVDpp(lr_all=0.0092244620489602275, n_factors=71, reg_all=0.078864113503182592)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -190,16 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.175193448906952, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3858988120492683, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,11 +264,11 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.175193\n",
-      "r73_c1,3.022989\n",
-      "r156_c1,3.743569\n",
-      "r160_c1,3.393022\n",
-      "r248_c1,3.336667\n",
+      "r37_c1,3.385899\n",
+      "r73_c1,3.124768\n",
+      "r156_c1,3.766790\n",
+      "r160_c1,3.321574\n",
+      "r248_c1,3.561472\n",
       "r25\n"
      ]
     }
