--- a/src/KNNBaseline_surprise.ipynb
+++ b/src/KNNBaseline_surprise.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,53 @@
     "note: run on Leonhard cluster (20 cores and 22GB mem) <br/>\n",
     "cv=10\n",
     "\n",
-    "1.008268129160658\n",
-    "{}\n",
+    "0.990745916194\n",
+    "{'k': 190, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 191, 'user_based': True}}\n",
+    "\n",
+    "0.9907865737\n",
+    "{'k': 174, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 144, 'user_based': True}}\n",
+    "\n",
+    "0.990789001481\n",
+    "{'k': 165, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 91, 'user_based': True}}\n",
+    "\n",
+    "0.990866512039\n",
+    "{'k': 157, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 175, 'user_based': True}}\n",
+    "\n",
+    "0.990881215984\n",
+    "{'k': 193, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 108, 'user_based': True}}\n",
+    "\n",
+    "0.990881263871\n",
+    "{'k': 186, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 71, 'user_based': True}}\n",
+    "\n",
+    "0.990905733161\n",
+    "{'k': 197, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 61, 'user_based': True}}\n",
+    "\n",
+    "0.990904062625\n",
+    "{'k': 176, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 168, 'user_based': True}}\n",
+    "\n",
+    "0.990961856449\n",
+    "{'k': 183, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 63, 'user_based': True}}\n",
+    "\n",
+    "0.991028325888\n",
+    "{'k': 147, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
+    "\n",
+    "0.991081017802\n",
+    "{'k': 136, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
+    "\n",
+    "0.99108224188\n",
+    "{'k': 149, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
+    "\n",
+    "0.991085028421\n",
+    "{'k': 139, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
+    "\n",
+    "0.991131609141\n",
+    "{'k': 161, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 54, 'user_based': True}}\n",
+    "\n",
+    "0.99112466769\n",
+    "{'k': 140, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
+    "\n",
+    "0.991160936299\n",
+    "{'k': 136, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
     "\n",
     "0.991818290107\n",
     "{'k': 99, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 100, 'user_based': True}}\n",
@@ -133,7 +178,10 @@
     "{'k': 96, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 0, 'user_based': True}}\n",
     "\n",
     "0.998283812548\n",
-    "{'k': 86, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 0, 'user_based': True}}\n"
+    "{'k': 86, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 0, 'user_based': True}}\n",
+    "\n",
+    "1.008268129160658\n",
+    "{}\n"
    ]
   },
   {
@@ -149,9 +197,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimating biases using als...\n",
+      "Computing the pearson_baseline similarity matrix...\n",
+      "Done computing similarity matrix.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVDpp at 0x109d6ccc0>"
+       "<surprise.prediction_algorithms.knns.KNNBaseline at 0x10a7e5550>"
       ]
      },
      "execution_count": 3,
@@ -161,7 +218,12 @@
    ],
    "source": [
     "# choose optimal params from above\n",
-    "algo = \n",
+    "# {'k': 190, 'sim_options': {'name': 'pearson_baseline', 'shrinkage': 191, 'user_based': True}}\n",
+    "sim_options = {'name': 'pearson_baseline',\n",
+    "               'shrinkage': 191,\n",
+    "               'user_based': True\n",
+    "               }\n",
+    "algo = KNNBaseline(k=190, sim_options=sim_options)\n",
     "\n",
     "# train \n",
     "algo.fit(data.build_full_trainset())"
@@ -183,7 +245,7 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.3858988120492683, details={'was_impossible': False})"
+       "Prediction(uid=36, iid=0, r_ui=3.0, est=3.237701191883628, details={'actual_k': 186, 'was_impossible': False})"
       ]
      },
      "execution_count": 4,
@@ -232,17 +294,17 @@
      "output_type": "stream",
      "text": [
       "Id,Prediction\n",
-      "r37_c1,3.385899\n",
-      "r73_c1,3.124768\n",
-      "r156_c1,3.766790\n",
-      "r160_c1,3.321574\n",
-      "r248_c1,3.561472\n",
+      "r37_c1,3.237701\n",
+      "r73_c1,2.961849\n",
+      "r156_c1,3.718130\n",
+      "r160_c1,3.312480\n",
+      "r248_c1,3.266307\n",
       "r25\n"
      ]
     }
    ],
    "source": [
-    "output = helpers.write_submission(ratings, 'submission_surprise_SVDpp_0.csv')\n",
+    "output = helpers.write_submission(ratings, 'submission_surprise_KNNBaseline_0.csv')\n",
     "print(output[0:100])"
    ]
   },
